Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -144,11 +144,11 @@
         "\n",
         "El caso trivial es cuando $n\\leq1$, en este caso el agoritmo no realiza operación alguna solo se devuelve el mismo conjunto, por lo tanto $T(1)=0$\n",
         "\n",
-        "Supongamos que tenemos un conjunto de 2 elementos a ordenar, es decir $n=2$ y además estos elementos se encuentran en orden inverso. De acuerdo a la definición de este algoritmo, el primer elemento, digamos el elemento $k$ ya se encuentra en su posición y no hace falta realizar operación alguna, sin embargo el segundo elemento ($k+1$) tiene que compararse con el elemento $k$ y ademas recorrerlo una posición a la derecha, finalmente se devuelve el conjunto ordenado, por lo tanto $T(2)=1$.\n",
+        "Supongamos que tenemos un conjunto de 2 elementos a ordenar, es decir $n=2$ y además estos elementos se encuentran en orden inverso. De acuerdo a la definición de este algoritmo, el primer elemento, digamos el elemento $k$ ya se encuentra en su posición y no hace falta realizar operación alguna, sin embargo el segundo elemento ($k+1$) tiene que compararse con el elemento $k$ y además recorrerlo una posición a la derecha, finalmente se devuelve el conjunto ordenado, por lo tanto $T(2)=1$.\n",
         "\n",
-        "Para el caso en el que $n=3$ se presenta el caso $T(2)$ ya que tenemos que ordenar los 2 primeros elementos del conjunto y además tenemos que comparar al elemento $k+3$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(3)=T(2)+2=1+2=3$.\n",
+        "Para el caso en el que $n=3$ se presenta el caso $T(2)$ ya que tenemos que ordenar los 2 primeros elementos del conjunto y además tenemos que comparar al elemento $k+3$ contra todos los ya ordenados y además recorrer a todos los elementos ordenados previamente, por lo tanto $T(3)=T(2)+2=1+2=3$.\n",
         "\n",
-        "Cuando $n=4$ se presenta el caso $T(3)$ ya que tenemos que ordenar los 3 primeros elementos del conjunto y además tenemos que comparar al elemento $k+4$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(4)=T(3)+3=3+3=6$.\n",
+        "Cuando $n=4$ se presenta el caso $T(3)$ ya que tenemos que ordenar los 3 primeros elementos del conjunto y además tenemos que comparar al elemento $k+4$ contra todos los ya ordenados y además recorrer a todos los elementos ordenados previamente, por lo tanto $T(4)=T(3)+3=3+3=6$.\n",
         "\n",
         "Si pensamos que el conjunto contiene $n$ elementos ordenados de manera inversa, entonces el tiempo (número de operaciones) que le tomará a este algoritmo ordenar el conjunto está dada por la expresión recursiva.\n",
         "\n",
@@ -172,7 +172,7 @@
         "\n",
         "$$\\frac{n(n-1)}{2}=\\frac{n²-n}{2}=\\frac{n²}{2}-\\frac{n}{2}\\tag{2}$$\n",
         "\n",
-        "De la ecuación (2) el término que crece de manera más rápida es $\\frac{n²}{2}$, de tal manera que basta con acotar esta función para encontrar la cota superior asintótica de este algoritmo, ademas.\n",
+        "De la ecuación (2) el término que crece de manera más rápida es $\\frac{n²}{2}$, de tal manera que basta con acotar esta función para encontrar la cota superior asintótica de este algoritmo, además.\n",
         "\n",
         "$$\\frac{n²}{2}=\\frac{1}{2}n²$$\n",
         "\n",
