Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb
+++ b/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -84,7 +84,7 @@
       "source": [
         "## Manejo de archivos en *Python*\n",
         "\n",
-        "Para hacer acceder a los archvivos dentro de una computadora usando *Python* es muy sencillo, ya que las bibliotecas usadas para acceder a los mismos ya se encuentran instaladas y solo hace falta acceder a las mismas.\n",
+        "Para acceder a los archvivos dentro de una computadora usando *Python* es muy sencillo, ya que las bibliotecas usadas para acceder a los mismos ya se encuentran instaladas y solo hace falta hacer uso de las mismas.\n",
         "\n",
         "A continuación se muestran los elementos más importantes que nos permiten manipular archviso en mediante *Python*.\n"
       ]
@@ -95,7 +95,7 @@
         "id": "i-BaC6ZSdhCc"
       },
       "source": [
-        "### Conceptos y clases\n",
+        "### Funciones\n",
         "\n",
         "La forma en la cual se pueden manipular archivos de texto plano (y archvivos en general) en *Python* es empleando las siguientes clases:\n",
         "\n",
