Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/05_TablasHash.ipynb
+++ b/AlgoritmosBusqueda/05_TablasHash.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/AlgoritmosBusqueda/05_TablasHash.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/AlgoritmosBusqueda/05_TablasHash.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -198,13 +198,13 @@
         "\n",
         "Ya que vimos como es que se construye y se utiliza una tabla de dispersión, vamos a analizar sus ventajas y desventajas:\n",
         "\n",
-        "* La principal ventaja es que **el orden de complejidad para isertar, buscar o eliminar en una tabla *hash* es constante**, es decir $O(1)$.\n",
+        "* La principal ventaja es que **el orden de complejidad para insertar, buscar o eliminar en una tabla *hash* es constante**, es decir $O(1)$.\n",
         "\n",
         "* Si la función *hash* fue definida siguiendo las características que se piden para este tipo de funciones, utilizar una tabla *hash* se vuelve un procedimiento muy **eficiente y seguro**.\n",
         "\n",
-        "* La principal desventaja de una tabla *hash* es el hecho de que **ni las llaves, ni los valores estan obligados a conservar un orden**, así que es difícil ordenar por algún criterio una tabla *hash*.\n",
+        "* La principal desventaja de una tabla *hash* es el hecho de que **ni las llaves, ni los valores están obligados a conservar un orden**, así que es difícil ordenar por algún criterio una tabla *hash*.\n",
         "\n",
-        "* Otra desventaja es que **a veces es complicado eviar las colisiones**, así que se tiene que hacer uso de alguna técnica adicional para poder resolver las colisiones."
+        "* Otra desventaja es que **a veces es complicado evitar las colisiones**, así que se tiene que hacer uso de alguna técnica adicional para poder resolver las colisiones."
       ]
     },
     {
@@ -418,7 +418,7 @@
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/inteligencia.txt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "  # ruta donde se ubica el texto a analiza\n",
         "  data_mining(\"inteligencia.txt\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +598,7 @@
         "\n",
         "  amazon.cobrar(cliente3)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
