Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/05_TablasHash.ipynb
+++ b/AlgoritmosBusqueda/05_TablasHash.ipynb
@@ -215,7 +215,7 @@
       "source": [
         "# Diccionarios en *Python*\n",
         "\n",
-        "Los diccionarios de *Python*, son una de muchas formas de poner en práctica el concepto de tablas *hash*, son muy útiles y faciles de usar.\n",
+        "Los diccionarios de *Python*, son una de muchas formas de poner en práctica el concepto de tablas *hash*, son muy útiles y fáciles de usar.\n",
         "\n",
         "Además como ya vienen incluidos dentro de las paqueterias de *Python* no hace falta instalar, ni si quiera importar algun paquete para poder hacer uso de los diccionarios."
       ]
@@ -245,7 +245,7 @@
       "source": [
         "## Sintaxis de los diccionarios\n",
         "\n",
-        "Este tipo de estructuras se emplea principalmente en *data mining* o *big data*, pero no es su único uso, también se puede usar en áreas como *deep learning* o incluso en *natural language processing*. A continuación se muestra un ejemplo de como usar los diccionarios de Python.\n",
+        "Este tipo de estructuras se emplea principalmente en *data mining* o *big data*, pero no es su único uso, también se puede usar en áreas como *deep learning* o incluso en *natural language processing*. A continuación se muestra un ejemplo de como usar los diccionarios de *Python*.\n",
         "\n",
         "* `diccionario = {}`: instrucción para crear un diccionario vacío.\n",
         "\n",
