Creado mediante Colaboratory

--- a/Simulacion/01_Simulacion.ipynb
+++ b/Simulacion/01_Simulacion.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Simulacion/01_Simulacion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Simulacion/01_Simulacion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "\n",
         "Es por estos motivos que generar simulaciones **adecuadas** y **confiables** es una habilidad importante de todo estudiante de ciencias.\n",
         "\n",
-        "La ciencia se desarrolla aplicando el método científico, lo que significa que, **se observa un fenómeno** que se requiere estudiar, **se plantea una hipótesis*** que explica el comportamiento de dicho fenómeno y finalmente **mediante una serie de experimentos (algunos muy costosos) se pretende corroborar la hipótesis**.\n",
+        "La ciencia se desarrolla aplicando el método científico, lo que significa que, **se observa un fenómeno** que se requiere estudiar, **se plantea una hipótesis** que explica el comportamiento de dicho fenómeno y finalmente **mediante una serie de experimentos (algunos muy costosos) se pretende corroborar la hipótesis**.\n",
         "\n",
         "En el campo de las ciencias exactas la simulación por computadora ha probado ser una herramienta extremadamente útil, ya que permite ahorrar mucho tiempo y dinero. Una simulación por computadora normalmente no es muy costosa y se puede repetir las veces que sea necesario e incluso se puede acelerar el paso de tiempo del fenómeno que se requiere estudiar.\n",
         "\n",
@@ -75,7 +75,7 @@
         "\n",
         "Actualmente existen básicamente 2 tipos de simulaciones. La primera de ellas son las simulaciones basadas en **modelos matemáticos complejos** que incorporan el uso de ecuaciones diferenciales, sistemas de ecuaciones o integrales para describir el comportamiento de un fenómeno, este tipo de simulaciones se estudian en materias como **análisis numérico** o **modelación matemática**.\n",
         "\n",
-        "El otro tipo de simulaciones son las **simulaciones basadas en agentes** (antes autómatas celulares). En este tipo de simulaciones, la idea principal es tratar de determinar las **interacciones locale entre los individuos** que conforman el sistema, para poder determinar cual sera el comportamiento del sistema en el paso siguiente de tiempo.\n",
+        "El otro tipo de simulaciones son las **simulaciones basadas en agentes** (antes autómatas celulares). En este tipo de simulaciones, la idea principal es tratar de determinar las **interacciones locales entre los individuos** que conforman el sistema, para poder determinar cual sera el comportamiento del sistema en el paso siguiente de tiempo.\n",
         "\n",
         "Sin importar el tipo de simulación la forma en la que esta debe ser construida no cambia mucho.\n",
         "\n",
@@ -125,7 +125,7 @@
         "## Modeños Matemáticos (métodos numéricos)\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/lluvia.png?raw=1\" width=\"600\"> \n",
+        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/0130592dfaa91724c2037559bc0bbf9be063c738/Figuras/redesNeuronales/lluvia.gif?raw=1\" width=\"600\"> \n",
         "\n",
         "Figura 4: Modelo Pluvial\n",
         "</center>\n",
@@ -208,9 +208,9 @@
         "\n",
         "* Conjunto de estados: cada célula puede tomar el valor de \\{0,1\\}.\n",
         "\n",
-        "* Vecindad: la vecindad de una célula sera la célula anterior y la célula posterior. La **frontesra es continua**, es decir que la ultima célula esta conectada con la primera.\n",
+        "* Vecindad: la vecindad de una célula será la célula anterior y la célula posterior. La **frontera es continua**, es decir que la última célula está conectada con la primera.\n",
         "\n",
-        "* Función de transición: esta definida de la siguiente manera.\n",
+        "* Función de transición: está definida de la siguiente manera.\n",
         "\n",
         "\\begin{array}{c|c|c|c|c|c|c|c|}\n",
         "Vecindad & 111 & 110 & 101 & 100 & 011 & 010 & 001 & 000\\\\\n",
@@ -271,9 +271,9 @@
         "\n",
         "* Conjunto de estados: cada célula puede tomar el valor de \\{0,1\\}.\n",
         "\n",
-        "* Vecindad: la vecindad de una célula sera la célula anterior y la célula posterior. La **frontera es continua**, es decir que la ultima célula esta conectada con la primera.\n",
+        "* Vecindad: la vecindad de una célula sera la célula anterior y la célula posterior. La **frontera es continua**, es decir que la última célula está conectada con la primera.\n",
         "\n",
-        "* Función de transición: esta definida de la siguiente manera.\n",
+        "* Función de transición: está definida de la siguiente manera.\n",
         "\\begin{array}{c|c|c|c|c|c|c|c|}\n",
         "Vecindad &\t111\t&110\t&101\t&100\t&011\t&010\t&001\t&000\\\\\n",
         "\\hline\n",
