Creado mediante Colaboratory

--- a/Bases_de_Datos/01_BasesDeDatos.ipynb
+++ b/Bases_de_Datos/01_BasesDeDatos.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "Ahora por otro lado, para poder decir que el acceso a la información de una base de datos se realiza de manera organizada, se debe garantizar que las consultas, actualización o eliminación de la información se llevan a cabo de manera eficiente.\n",
         "\n",
-        "Una forma de llevar a cabo esta organización de manera eficiente es mediante **entidades** que agrupan un conjunto de elementos con los los mismos **atributos** y las **relaciones** que guardan los elementos de la base de datos.\n",
+        "Una forma de llevar a cabo esta organización de manera eficiente es mediante **entidades** que agrupan un conjunto de elementos con los mismos **atributos** y las **relaciones** que guardan los elementos de la base de datos.\n",
         "\n",
         "A esta forma de organizar la información se le conoce como el **modelo entidad-relacion** (modelo e-r). Una de las herramientas básicas del modelo e-r es el **diagrama entidad-relación**, también conocido como DER, en el cual se muestran de manera gráfica, las entidades, atributos y relaciones que existen dentro de la base de datos."
       ]
