Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -628,9 +628,9 @@
         "\n",
         "Y el resultado de la misma sería.\n",
         "\n",
-        "| count    |\n",
+        "| max    |\n",
         "| :-:      |\n",
-        "| $8$      |\n",
+        "| $5$      |\n",
         "\n",
         "Para ordenar los resultados por el atributo *ND* la consulta sería la siguiente\n",
         "\n",
