Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -233,7 +233,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/empleado.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Relación Empleado"
+        "<center>\n",
+        "FIGURA: Relación Empleado\n",
+        "</center>"
       ]
     },
     {
@@ -245,7 +247,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/sigma.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: $\\sigma_{ND=4}(Empleado)$"
+        "<center>\n",
+        "FIGURA: $\\sigma_{ND=4}(Empleado)$\n",
+        "</center>"
       ]
     },
     {
@@ -265,7 +269,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/emp2.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Relación Empleado"
+        "<center>\n",
+        "FIGURA: Relación Empleado\n",
+        "</center>"
       ]
     },
     {
@@ -277,7 +283,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/proye.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: $\\pi_{SEXO,SALARIO}(Empleado)$"
+        "<center>\n",
+        "FIGURA: $\\pi_{SEXO,SALARIO}(Empleado)$\n",
+        "</center>"
       ]
     },
     {
@@ -293,7 +301,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/emp3.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Relación Empleado"
+        "<center>\n",
+        "FIGURA: Relación Empleado\n",
+        "</center>"
       ]
     },
     {
@@ -305,7 +315,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/interme.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Resultado Intermedio"
+        "<center>\n",
+        "FIGURA: Resultado Intermedio\n",
+        "</center>"
       ]
     },
     {
@@ -317,7 +329,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/renombre.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Renombre de atributos"
+        "<center>\n",
+        "FIGURA: Renombre de atributos\n",
+        "</center>"
       ]
     },
     {
@@ -345,7 +359,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/alumprof.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: ALUMNO, PROFESOR"
+        "<center>\n",
+        "FIGURA: ALUMNO, PROFESOR\n",
+        "</center>"
       ]
     },
     {
@@ -357,7 +373,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/union.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
-        "FIGURA: Unión"
+        "<center>\n",
+        "FIGURA: Unión\n",
+        "</center>"
       ]
     },
     {
@@ -369,7 +387,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/inter.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
-        "FIGURA: Intersección"
+        "<center>\n",
+        "FIGURA: Intersección\n",
+        "</center>"
       ]
     },
     {
@@ -381,7 +401,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dif.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
-        "FIGURA: Diferencia"
+        "<center>\n",
+        "FIGURA: Diferencia\n",
+        "</center>"
       ]
     },
     {
@@ -403,7 +425,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/prodcar.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: PR_STAF, DP_STAF"
+        "<center>\n",
+        "FIGURA: PR_STAF, DP_STAF\n",
+        "</center>"
       ]
     },
     {
@@ -415,7 +439,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/resultadoprodcar.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Producto Cartesiano"
+        "<center>\n",
+        "FIGURA: Producto Cartesiano\n",
+        "</center>"
       ]
     },
     {
@@ -434,8 +460,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/emp.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "\n",
-        "FIGURA: Relación Empleado"
+        "<center>\n",
+        "FIGURA: Relación Empleado\n",
+        "</center>"
       ]
     },
     {
@@ -447,7 +474,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/depto.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Relación Departamento"
+        "<center>\n",
+        "FIGURA: Relación Departamento\n",
+        "</center>"
       ]
     },
     {
@@ -459,7 +488,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/jefedepto.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: JEFE_DEPTO $\\leftarrow$DPT $\\bowtie_{NSS_{-}JEFE=NSS}EMP$"
+        "<center>\n",
+        "FIGURA: JEFE_DEPTO $\\leftarrow$DPT $\\bowtie_{NSS_{-}JEFE=NSS}EMP$\n",
+        "</center>"
       ]
     },
     {
@@ -501,7 +532,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/natural.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: Natural Join"
+        "<center>\n",
+        "FIGURA: Natural Join\n",
+        "</center>"
       ]
     },
     {
@@ -513,7 +546,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/resjoin.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: DEPTO_PROY $\\leftarrow PRY * DPT$"
+        "<center>\n",
+        "FIGURA: DEPTO_PROY $\\leftarrow PRY * DPT$\n",
+        "</center>"
       ]
     },
     {
@@ -529,7 +564,9 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/div.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: División"
+        "<center>\n",
+        "FIGURA: División\n",
+        "</center>"
       ]
     },
     {
@@ -571,10 +608,12 @@
         "\n",
         "  * Ultimo: realizamos la división $NSS_{-}N\\acute{U}M_{-}PRY \\div N\\acute{U}MS_{-}PRY$. \n",
         "\n",
-        "  <center>\n",
+        "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ejemodiv.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
-        "FIGURA: División"
+        "<center>\n",
+        "FIGURA: División\n",
+        "</center>"
       ]
     },
     {
