Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -84,20 +84,19 @@
       "source": [
         "# Estándar *XML*\n",
         "\n",
-        "Uno de los estándares más ampliamente usado y conocido es el llamado estándar *xml* de sus siglas en ingles eXtensible Markup Languaje, creado a principios de la decada de los 90's con la intensión de compartir información.\n",
+        "Uno de los estándares más ampliamente usado y conocido es el llamado estándar *xml* de sus siglas en ingles *eXtensible Markup Languaje*, creado a principios de la década de los 90's con la intención de compartir información.\n",
         "\n",
-        "El metalenguaje *xml* fue creado por *World Wide Web Consortium (W3C)* y su caracteristica principal es que, mediante el uso de etiquetas permite definir la gramática de lenguajes específicos, es decir que permite crear las etiquetas y atributos necesarios para el fin que se necesite.\n",
+        "El metalenguaje *xml* fue creado por *World Wide Web Consortium (W3C)* y su característica principal es que, mediante el uso de etiquetas permite definir la gramática de lenguajes específicos, es decir que permite crear las etiquetas y atributos necesarios para el fin que se necesite.\n",
         "\n",
         "Otra de sus características y por lo que su uso se ha popularizado, es por que a diferencia de otros lenguajes, *xml* es compatible con el uso para a bases de datos, lo cual es útil cuando diferentes aplicaciones necesitan comunicarse entre si.\n",
-        "\n",
         "Principalmente se usa en:\n",
         "\n",
         "*   Bases de datos.\n",
         "*   Facturas electrónicas.\n",
         "*   Interfaces gráficas.\n",
-        "*   Hojas de calculo.\n",
+        "*   Hojas de cálculo.\n",
         "\n",
-        "Estas son algunos de sus usos más comunes, sin embargo *xml* es tan flexible que no esta limitado a estos y puede ser usado en cualquier situación en la que se requiera el uso de un lenguaje sencillo para compartir información.\n",
+        "Estas son algunos de sus usos más comunes, sin embargo *xml* es tan flexible que no está limitado a estos y puede ser usado en cualquier situación en la que se requiera el uso de un lenguaje sencillo para compartir información.\n",
         "\n"
       ]
     },
@@ -164,7 +163,7 @@
       "source": [
         "### *paneles.xml*\n",
         "\n",
-        "Cuando se desarrolla un stio web (o cualquier interfaz de usuario) es muy común que los distintos desarrolladores trabajen usando diferentes entornos de desarrollo (*Linux, Windosws, Mac,* etc.), es por este motivo que la información normalmente se transfiera haciendo uso de *xml*.\n",
+        "Cuando se desarrolla un sitio web (o cualquier interfaz de usuario) es muy común que los distintos desarrolladores trabajen usando diferentes entornos de desarrollo (*Linux, Windosws, Mac,* etc.), es por este motivo que la información normalmente se transfiera haciendo uso de *xml*.\n",
         "\n",
         "Al abrir el documento *paneles.xml* podemos ver información referente a la apariencia de la GUI (Grafic User Interface) de algún sitio de internet. En este documento se muestran los paneles que conforman la página principal así como algunas de sus características.\n",
         "\n",
