--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "01_EstandaresInformacion.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +184,7 @@
         "\n",
         "En este documento se muestra la información de algunos alumnos y sus tutores. Supongamos que un par de alumnos están desarrollando su proyecto final de la materia de Manejo de Datos y para que no haya diferencias en los datos dentro de la base de datos, ambos deciden usar *xml* como estándar para compartir información.\n",
         "\n",
-        "De tal manera que al cargar estos datos dentro de su base de datos loca, la información para ambos alumnos deberial lucir similar a estas imagenes.\n",
+        "De tal manera que al cargar estos datos dentro de su base de datos local, la información para ambos alumnos debería lucir similar a estas imágenes.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/ALUMNOS.png?raw=1\" width=\"600\"> \n",
@@ -302,7 +301,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Al abrir el documento *ManejoDatos9180.json* desde colab, haciendo uso del navegador, podemos notar que el navegador lo reconoce de manera correcta y no marca error alguno, lo que significa que este documento esta bien formado.\n",
+        "Al abrir el documento *ManejoDatos9180.json* desde colab, haciendo uso del navegador, podemos notar que el navegador lo reconoce de manera correcta y no marca error alguno, lo que significa que este documento está bien formado.\n",
         "\n",
         "En este punto podemos estar seguro que la información contenida en este documento sigue las reglas (estándares) de los documentos tipo *JSON* y lo podemos compartir con cualquier usuario o aplicación que reconozca el estándar *JSON* y podrá acceder a la información de manera organizada y eficiente."
       ],
@@ -315,9 +314,9 @@
       "source": [
         "# *JSON + Python*\n",
         "\n",
-        "De manera similar a como pudimos usar el manejador *MySQL* con *Python* un estándar (como en este caso *JSON*) se vuelve aun más potente cuando se combina con algún lenguaje de programación.\n",
+        "De manera similar a como pudimos usar el manejador *MySQL* con *Python* un estándar (como en este caso *JSON*) se vuelve aún más potente cuando se combina con algún lenguaje de programación.\n",
         "\n",
-        "Eso significa que mediante el *API* adecuado podemos procesar (*parsear*) de manera aún más sencilla la información contenida en este documento. El termino *parseo* se utiliza en el ámbito del manejo de datos para el proceso mediante el cual se analiza un documento y se obtiene la información que este contiene.\n",
+        "Eso significa que mediante el *API* adecuado podemos procesar (*parsear*) de manera aún más sencilla la información contenida en este documento. El término *parseo* se utiliza en el ámbito del manejo de datos para el proceso mediante el cual se analiza un documento y se obtiene la información que este contiene.\n",
         "\n",
         "Existe una gran cantidad de *API's* en el lenguaje *Python* que nos permiten procesar los datos contenidos en un documento tipo *JSON*, sin embargo en este ejemplo vamos a usar el módulo `json`, que ya viene instalado con la instalación de *Python*."
       ],
@@ -370,14 +369,14 @@
         "  \"Telefono\": 5537626789})\n",
         "\n",
         "# usamos la funcion open para crear un documento\n",
-        "with open('ManejoDatos.json', 'w') as archivo:\n",
+        "with open('ManejoDatos9180.json', 'w') as archivo:\n",
         "  # se vacia el diccionario en el documento\n",
         "  json.dump(datos, archivo, indent=4, ensure_ascii=False)"
       ],
       "metadata": {
         "id": "x3tB2Tv2AHWf"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -417,12 +416,12 @@
       ],
       "metadata": {
         "id": "YLlduGIPfGyF",
-        "outputId": "3ac8cba9-3848-41e2-e45e-7ba3c19e8dc6",
+        "outputId": "dea0699e-4459-4064-862f-33e0de82847e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,16 +441,6 @@
             "Carrera: Actuaría\n",
             "Correo: aranzazu-08@hotmail.com\n",
             "Telefono: 5537626789\n",
-            "\n",
-            "Nombre: Rodríguez Vega Octavio\n",
-            "Carrera: Matemáticas\n",
-            "Correo: octavius@ciencias.unam.mx\n",
-            "Telefono: 5536659591\n",
-            "\n",
-            "Nombre: Vásquez Martínez Andrea Lizbeth\n",
-            "Carrera: Actuaría\n",
-            "Correo: andreavasquez115@gmail.com\n",
-            "Telefono: 5568734366\n",
             "\n"
           ]
         }
@@ -486,21 +475,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sD0AY9vl-A9B",
-        "outputId": "04e76f21-7575-4659-8c82-90124ff8f763"
+        "outputId": "c879f7a1-86c6-423f-9341-8d8459eaa93d"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting mysql-connector-python\n",
-            "  Downloading mysql_connector_python-8.0.28-cp37-cp37m-manylinux1_x86_64.whl (37.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 37.6 MB 1.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
+            "  Downloading mysql_connector_python-8.0.31-cp37-cp37m-manylinux1_x86_64.whl (23.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 23.5 MB 1.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: protobuf<=3.20.1,>=3.11.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.19.6)\n",
             "Installing collected packages: mysql-connector-python\n",
-            "Successfully installed mysql-connector-python-8.0.28\n"
+            "Successfully installed mysql-connector-python-8.0.31\n"
           ]
         }
       ]
@@ -555,7 +544,7 @@
       "metadata": {
         "id": "nzsnhRqc7eo-"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -624,7 +613,7 @@
       "metadata": {
         "id": "zMenfW19exVG"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
