--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "01_EstandaresInformacion.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,14 +370,14 @@
         "  \"Telefono\": 5537626789})\n",
         "\n",
         "# usamos la funcion open para crear un documento\n",
-        "with open('ManejoDatos9180.json', 'w') as archivo:\n",
+        "with open('ManejoDatos.json', 'w') as archivo:\n",
         "  # se vacia el diccionario en el documento\n",
         "  json.dump(datos, archivo, indent=4, ensure_ascii=False)"
       ],
       "metadata": {
         "id": "x3tB2Tv2AHWf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +478,7 @@
         "id": "sD0AY9vl-A9B",
         "outputId": "c879f7a1-86c6-423f-9341-8d8459eaa93d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +545,7 @@
       "metadata": {
         "id": "nzsnhRqc7eo-"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +614,7 @@
       "metadata": {
         "id": "zMenfW19exVG"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
