Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/Clasificador.ipynb
+++ b/AlgoritmosBusqueda/Clasificador.ipynb
@@ -305,7 +305,7 @@
         "\n",
         "Además, debe tener los siguientes métodos:\n",
         "\n",
-        "* `__init__(self, ruta)`: Constructor de la clase. Recibe como parámetro la ruta de la carpeta que contiene los documentos a clasificar. Debe inicializar los atributos `ruta`, `documentos` y `som`.\n",
+        "* `__init__(self, ruta)`: Constructor de la clase. Recibe como parámetro la ruta de la carpeta que contiene los documentos a clasificar. Debe inicializar los atributos `ruta` y `documentos`.\n",
         "* `__str__(self)`: Método que devuelve la ruta de la carpeta y el número de documento a clasificar.\n",
         "* `cargar_documentos(self)`: Método que debe leer los documentos de la carpeta que se encuentre en `self.ruta` crear un objeto de tipo `Documento`, por cada documento dentro de la carpeta y almacenarlos en la lista `self.documentos`.\n"
       ]
