Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/Clasificador.ipynb
+++ b/AlgoritmosBusqueda/Clasificador.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "01zOTVQJPpos"
+        "id": "4GzScancGNM5"
       },
       "source": [
         "Before you turn this problem in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
@@ -25,7 +25,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ikntjP6APpox"
+        "id": "2gO5jb7iGNM_"
       },
       "outputs": [],
       "source": [
@@ -36,7 +36,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6OqolyJwPpoz"
+        "id": "ZdyZmo6-GNNB"
       },
       "source": [
         "---"
@@ -45,7 +45,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mI8B5qKDPpoz"
+        "id": "V-sI-RlfGNNB"
       },
       "source": [
         "# Clasificador (SOM)\n",
@@ -71,7 +71,7 @@
           "task": false
         },
         "tags": [],
-        "id": "zAXkYy9gPpo0"
+        "id": "Vn3z6KBUGNND"
       },
       "outputs": [],
       "source": [
@@ -114,7 +114,7 @@
           "solution": false,
           "task": false
         },
-        "id": "Rd9QXAt3Ppo1"
+        "id": "mVyj0Vk8GNNE"
       },
       "outputs": [],
       "source": [
@@ -126,7 +126,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7wOm7INiPpo2"
+        "id": "39pwZQnmGNNF"
       },
       "source": [
         "# Objetivos\n",
@@ -137,7 +137,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U6jOBWHJPpo2"
+        "id": "P08OfZ65GNNG"
       },
       "source": [
         "## (3 Puntos) Clase `Documento`\n",
@@ -171,7 +171,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5Fq_oHLyPpo4"
+        "id": "wCAGQ46PGNNI"
       },
       "source": [
         "## Diccionario universal\n",
@@ -204,7 +204,7 @@
           "task": false
         },
         "tags": [],
-        "id": "-A1bvhZdPpo5"
+        "id": "qBbvqeQyGNNI"
       },
       "outputs": [],
       "source": [
@@ -220,7 +220,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "e-64-B19Ppo5"
+        "id": "npKbWiL6GNNJ"
       },
       "source": [
         "## Probando la clase `Documento`\n",
@@ -257,7 +257,7 @@
           "task": false
         },
         "tags": [],
-        "id": "vuMYwIYjPpo6"
+        "id": "D4tQVxABGNNJ"
       },
       "outputs": [],
       "source": [
@@ -282,7 +282,7 @@
           "solution": false,
           "task": false
         },
-        "id": "88PwmKBsPpo6"
+        "id": "gcE5J4VPGNNK"
       },
       "outputs": [],
       "source": [
@@ -293,7 +293,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TsOuvD9WPpo7"
+        "id": "ZuEvm7gOGNNK"
       },
       "source": [
         "## (2 Puntos) Clase `Clasificador`\n",
@@ -327,7 +327,7 @@
           "task": false
         },
         "tags": [],
-        "id": "0wtgM8nHPpo7"
+        "id": "B5x3ITZHGNNK"
       },
       "outputs": [],
       "source": [
@@ -339,7 +339,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WWQeCoKjPpo8"
+        "id": "U4FWcLG9GNNL"
       },
       "source": [
         "## Probando la clase `Clasificador`\n",
@@ -402,7 +402,7 @@
           "task": false
         },
         "tags": [],
-        "id": "GT5smYhXPpo9"
+        "id": "RbU_M789GNNL"
       },
       "outputs": [],
       "source": [
@@ -428,7 +428,7 @@
           "solution": false,
           "task": false
         },
-        "id": "lsBUisLsPpo9"
+        "id": "YTapBIuQGNNM"
       },
       "outputs": [],
       "source": [
@@ -439,7 +439,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "d_09UnegPpo-"
+        "id": "f0ccN6EjGNNM"
       },
       "source": [
         "## (2 Puntos) Documentos a clasificar\n",
@@ -475,7 +475,7 @@
           "task": false
         },
         "tags": [],
-        "id": "44Boel1RPpo-"
+        "id": "GBbeua0SGNNM"
       },
       "outputs": [],
       "source": [
@@ -503,7 +503,7 @@
           "task": false
         },
         "tags": [],
-        "id": "2fqWNik4Ppo-"
+        "id": "Y9mNE3ZDGNNN"
       },
       "outputs": [],
       "source": [
@@ -514,7 +514,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2iB6g0iZPpo_"
+        "id": "CA54pSkiGNNN"
       },
       "source": [
         "## (3 Puntos) Entrenando el SOM\n",
@@ -532,13 +532,13 @@
         "som.train(vectores_caracteristicos)\n",
         "```\n",
         "\n",
-        "Y finalmente, podemos la lista que nos devuelve el método map_vects. Por ejemplo:\n",
+        "Y finalmente, podemos ver la lista que nos devuelve el método `map_vects`. Por ejemplo:\n",
         "\n",
         "```python\n",
         "print(som.map_vects(vectores_caracteristicos))\n",
         "```\n",
         "\n",
-        "El resultado puede ser algo como\n",
+        "El resultado der.\n",
         "\n",
         "```\n",
         "[array([1, 1]), array([1, 0]), array([1, 0]), array([0, 0]), array([0, 0]), array([1, 1]), array([0, 0]), array([0, 1]), array([0, 1]), array([1, 1]), array([0, 1])]\n",
@@ -551,7 +551,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "V4BSVXpEPpo_"
+        "id": "tJAyG3paGNNN"
       },
       "outputs": [],
       "source": [
@@ -577,7 +577,7 @@
           "task": false
         },
         "tags": [],
-        "id": "uwOA4khVPppA"
+        "id": "JjME2ywKGNNO"
       },
       "outputs": [],
       "source": [
@@ -853,7 +853,7 @@
           "task": false
         },
         "tags": [],
-        "id": "_C2xiIP7PppD"
+        "id": "RLrpGoBdGNNR"
       },
       "outputs": [],
       "source": [
@@ -865,7 +865,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ze7yUdjWPppF"
+        "id": "wPbxb-54GNNT"
       },
       "source": [
         "Dada la naturaleza aleatoria inicial del mapa, es posible que tu clasificación sea diferente a la que se muestra arriba. Sin embargo, si se ha hecho todo correctamente, la clasificación debe ser muy similar a la que se muestra arriba.\n",
@@ -906,7 +906,7 @@
           "task": false
         },
         "tags": [],
-        "id": "UWPKXvXqPppF"
+        "id": "KB7K9odLGNNT"
       },
       "outputs": [],
       "source": [
@@ -932,7 +932,7 @@
           "solution": false,
           "task": false
         },
-        "id": "-nvhRDNYPppG"
+        "id": "A7T1-H4pGNNU"
       },
       "outputs": [],
       "source": [
@@ -943,7 +943,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "crC7sprOPppG"
+        "id": "YbgsBVHqGNNU"
       },
       "source": [
         "## Observaciones\n",
@@ -952,7 +952,14 @@
         "\n",
         "Finalmente el polinomio de direccionamiento es una manera de \"aplanar\" el mapa y obtener una lista de clasificaciones.\n",
         "\n",
-        "Se deja como ejercicio para el lector, incrementar la dificultad de este ejercicio, procesando documentos o usando tamaños de mapa más grandes para obtener mejores resultados, además de diccionarios más grandes pars obtener clasificaciones más precisas."
+        "Se deja como ejercicio para el lector, incrementar la dificultad de este ejercicio, procesando documentos o usando tamaños de mapa más grandes para obtener mejores resultados, además de diccionarios más grandes pars obtener clasificaciones más precisas.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/traemethanos.gif?raw=1\" width=\"600\">   \n",
+        "</center>\n",
+        "\n",
+        "\"¡Traiganme a Thanos!\"\n",
+        "-Thor, infinity war."
       ]
     }
   ],
