Se creó con Colab

--- a/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb
+++ b/AlgoritmosBusqueda/03_01_Manejo_de_Archivos.ipynb
@@ -144,7 +144,10 @@
         "outputId": "a2c37f6c-89cc-4b32-dbf3-efa013b29acc"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
+        "from pathlib import Path\n",
+        "lista = Path(\"ManejodeDatos9180.txt\")\n",
+        "if not lista.is_file():\n",
+        "    !wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
       ],
       "execution_count": null,
       "outputs": [
